...
        android:textColor="@color/colorTextIcons"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-medium" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/findRestaurantsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@color/colorAccent"
        android:hint="Enter Zip Code"
        android:padding="10dp" />

...
